[ci skip] Use a deffered feature building function to allow for more flexibility in future covariates handling ef63e93ff3fe850ec85e67fac124ac3b8be97627

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "88852a4d",
+   "id": "c89054ce",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "018c50b1",
+   "id": "e2ec756c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d82907da",
+   "id": "22390ea5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9597c83",
+   "id": "6ab322b1",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afa8c6f0",
+   "id": "c7cd972f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de332296",
+   "id": "7ee874a6",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f783cc35",
+   "id": "776e128b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fa4ef37",
+   "id": "a261cffd",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ade7847b",
+   "id": "f0197fb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19632b6c",
+   "id": "8a64dc63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9356a018",
+   "id": "1266ba57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27da0385",
+   "id": "cb11083c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dffa2a7b",
+   "id": "c1d09a4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1874ff68",
+   "id": "a0fb9141",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c5ea874",
+   "id": "eb4170d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c34f1c31",
+   "id": "191a9bef",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a720b8e5",
+   "id": "30559c3c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f4c430",
+   "id": "fbac6636",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "028d7f23",
+   "id": "359feadc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0dd22b9",
+   "id": "651add78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4a503cf",
+   "id": "c059fc90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9dbb3be",
+   "id": "1b7a5bb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3e83b1a",
+   "id": "7e8deb6a",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04d3aebc",
+   "id": "b7931711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbc86202",
+   "id": "9541ca2d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aefe9dd9",
+   "id": "8fe35016",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cbe2b09",
+   "id": "f9042119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0455115e",
+   "id": "24b488ad",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "438e1fc5",
+   "id": "f3537a45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3888652",
+   "id": "63c9d572",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1b07699",
+   "id": "3b4938c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac56012d",
+   "id": "6c492c4a",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d473265c",
+   "id": "e8df309c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdb7fb6f",
+   "id": "a0e2f21d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a44fbc20",
+   "id": "90e7cc55",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77ee5a18",
+   "id": "6ed0ddd6",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f39ae794",
+   "id": "26e24d7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,51 +661,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58d275bd",
+   "id": "8dec55eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import polars.selectors as cs\n",
     "\n",
     "\n",
-    "horizons = range(1, 25)  # Forecasting horizons from 1 to 24 hours\n",
-    "horizon_of_interest = 24\n",
+    "@skrub.deferred\n",
+    "def build_features(\n",
+    "    prediction_time,\n",
+    "    electricity_lagged,\n",
+    "    all_city_weather,\n",
+    "    calendar,\n",
+    "    future_feature_horizons=[1, 12, 24],\n",
+    "):\n",
     "\n",
-    "features = (\n",
-    "    (\n",
+    "    return (\n",
     "        prediction_time.join(\n",
     "            electricity_lagged, left_on=\"prediction_time\", right_on=\"time\"\n",
     "        )\n",
     "        .join(\n",
-    "            all_city_weather.with_columns(\n",
-    "                cs.starts_with(\"weather_\").shift(-horizon_of_interest)\n",
-    "                # .name.suffix(f\"_future_{horizon_of_interest}h\")\n",
+    "            all_city_weather.select(\n",
+    "                [pl.col(\"time\")]\n",
+    "                + [\n",
+    "                    pl.col(c).shift(-h).alias(c + f\"_future_{h}h\")\n",
+    "                    for c in all_city_weather.columns\n",
+    "                    if c != \"time\"\n",
+    "                    for h in future_feature_horizons\n",
+    "                ]\n",
     "            ),\n",
     "            left_on=\"prediction_time\",\n",
     "            right_on=\"time\",\n",
     "        )\n",
     "        .join(\n",
-    "            calendar.with_columns(\n",
-    "                cs.starts_with(\"weather_\").shift(-horizon_of_interest)\n",
-    "                # .name.suffix(f\"_future_{horizon_of_interest}h\")\n",
+    "            calendar.select(\n",
+    "                [pl.col(\"time\")]\n",
+    "                + [\n",
+    "                    pl.col(c).shift(-h).alias(c + f\"_future_{h}h\")\n",
+    "                    for c in calendar.columns\n",
+    "                    if c != \"time\"\n",
+    "                    for h in future_feature_horizons\n",
+    "                ]\n",
     "            ),\n",
     "            left_on=\"prediction_time\",\n",
     "            right_on=\"time\",\n",
     "        )\n",
-    "    )\n",
-    "    .drop(\"prediction_time\")\n",
-    "    .skb.mark_as_X()\n",
-    ")\n",
+    "    ).drop(\"prediction_time\")\n",
+    "\n",
+    "\n",
+    "features = build_features(\n",
+    "    prediction_time=prediction_time,\n",
+    "    electricity_lagged=electricity_lagged,\n",
+    "    all_city_weather=all_city_weather,\n",
+    "    calendar=calendar,\n",
+    ").skb.mark_as_X()\n",
+    "\n",
     "features"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "424104e4",
+   "id": "fda7f235",
    "metadata": {},
    "outputs": [],
    "source": [
+    "horizons = range(1, 25)  # Forecasting horizons from 1 to 24 hours\n",
+    "horizon_of_interest = horizons[-1]  # Focus on the 24-hour horizon\n",
+    "\n",
     "target_column_name_pattern = \"load_mw_horizon_{horizon}h\"\n",
     "\n",
     "targets = prediction_time.join(\n",
@@ -725,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18f02d5e",
+   "id": "27d06893",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,36 +761,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45b5c61c",
+   "id": "43fd5f95",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import HistGradientBoostingRegressor\n",
     "import skrub.selectors as s\n",
     "\n",
-    "load_selector = s.glob(\"load_*\")\n",
-    "cal_selector = s.glob(\"cal_*\")\n",
-    "holiday_selector = s.glob(\"cal_is_holiday\")\n",
-    "weather_selector = s.glob(\"weather_*\")\n",
-    "temperature_selector = s.glob(\"weather_temperature_*\")\n",
-    "moisture_selector = s.glob(\"weather_moisture_*\")\n",
-    "cloud_cover_selector = s.glob(\"weather_cloud_cover_*\")\n",
-    "rolling_load_selector = s.glob(\"load_mw_rolling_*\")\n",
-    "nothing_selector = s.glob(\"\")  # cannot match non-empty feature names\n",
     "\n",
     "predictions = features.skb.apply(\n",
     "    skrub.DropCols(\n",
     "        cols=skrub.choose_from(\n",
     "            {\n",
-    "                \"none\": nothing_selector,\n",
-    "                \"load\": load_selector,\n",
-    "                \"rolling_load\": rolling_load_selector,\n",
-    "                \"weather\": weather_selector,\n",
-    "                \"temperature\": temperature_selector,\n",
-    "                \"moisture\": moisture_selector,\n",
-    "                \"cloud_cover\": cloud_cover_selector,\n",
-    "                \"calendar\": cal_selector,\n",
-    "                \"holiday\": holiday_selector,\n",
+    "                \"none\": s.glob(\"\"),  # No column has empty name.\n",
+    "                \"load\": s.glob(\"load_*\"),\n",
+    "                \"rolling_load\": s.glob(\"load_mw_rolling_*\"),\n",
+    "                \"weather\": s.glob(\"weather_*\"),\n",
+    "                \"temperature\": s.glob(\"weather_temperature_*\"),\n",
+    "                \"moisture\": s.glob(\"weather_moisture_*\"),\n",
+    "                \"cloud_cover\": s.glob(\"weather_cloud_cover_*\"),\n",
+    "                \"calendar\": s.glob(\"cal_*\"),\n",
+    "                \"holiday\": s.glob(\"cal_is_holiday\"),\n",
+    "                \"future_1h\": s.glob(\"*_future_1h\"),\n",
+    "                \"future_12h\": s.glob(\"*_future_12h\"),\n",
+    "                \"future_24h\": s.glob(\"*_future_24h\"),\n",
     "            },\n",
     "            name=\"dropped_features\",\n",
     "        )\n",
@@ -789,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d4c40a5",
+   "id": "00b0f17f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -817,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e8d4bfa",
+   "id": "46476c86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42db92bb",
+   "id": "d0edd82a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eb8ef9d",
+   "id": "3ace72a8",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -894,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b75fadf7",
+   "id": "8bcb571b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d75725dc",
+   "id": "8186d5ff",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -916,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc444818",
+   "id": "f2289475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df347e70",
+   "id": "3b410b7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aed9191f",
+   "id": "f63414d2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -969,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca03182d",
+   "id": "ecfde1f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b54eb46",
+   "id": "eb7ad68b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b7d7dc1",
+   "id": "9efb282a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0de063a",
+   "id": "6574ee59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "403af95c",
+   "id": "b464864b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "337fc6dc",
+   "id": "b1adc342",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caf6f241",
+   "id": "0048218f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88b3a761",
+   "id": "19b49ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e591a0b9",
+   "id": "74e86ee4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c24052e",
+   "id": "dcd7b562",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83b7676c",
+   "id": "6840cb24",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1174,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e638d658",
+   "id": "4d7631d7",
    "metadata": {},
    "outputs": [],
    "source": []
