--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8b691722",
+   "id": "fbf83ff8",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a91b30b",
+   "id": "5c472493",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7645c24f",
+   "id": "a2342596",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88af9222",
+   "id": "5f3bfc77",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78898b22",
+   "id": "780373ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "937708ae",
+   "id": "ba777fb2",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ae0235c",
+   "id": "26b1ba42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db40ff0c",
+   "id": "56670aa1",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc99608",
+   "id": "0c042ea1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5b78a52",
+   "id": "4af6ee51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5d4d5cf",
+   "id": "3a9a8409",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c92ed180",
+   "id": "6869c5b3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "529ca74a",
+   "id": "23db8c49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a07a9a6",
+   "id": "e48738fa",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff867784",
+   "id": "50b1c007",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83272f55",
+   "id": "c5dabfb0",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "197dd799",
+   "id": "dda1e450",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b28949f",
+   "id": "81db6cba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c95d806",
+   "id": "fdb88d00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cc51836",
+   "id": "4eb7522c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acd83b3b",
+   "id": "6c2d5fa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "512c63a0",
+   "id": "8c03f3d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb3207ce",
+   "id": "c20fb1aa",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aec063c",
+   "id": "0b63b233",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73308d69",
+   "id": "1ed95575",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "962ba660",
+   "id": "fd3c4587",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9214b526",
+   "id": "3a2766c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09357079",
+   "id": "5a565b41",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72f4460a",
+   "id": "a62f1b81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad9499a6",
+   "id": "1227d7e6",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0177cd45",
+   "id": "dddf534f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91ea06e8",
+   "id": "c0a25675",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3caff7e",
+   "id": "e7e5bd97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f53c2ba2",
+   "id": "8db1aefa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12777cff",
+   "id": "ee4ccd30",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f64ad99c",
+   "id": "26b1e981",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0b6599c",
+   "id": "d69659c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,51 +661,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4b2dedb",
+   "id": "3d2effe0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import polars.selectors as cs\n",
     "\n",
     "\n",
-    "horizons = range(1, 25)  # Forecasting horizons from 1 to 24 hours\n",
-    "horizon_of_interest = 24\n",
+    "@skrub.deferred\n",
+    "def build_features(\n",
+    "    prediction_time,\n",
+    "    electricity_lagged,\n",
+    "    all_city_weather,\n",
+    "    calendar,\n",
+    "    future_feature_horizons=[1, 12, 24],\n",
+    "):\n",
     "\n",
-    "features = (\n",
-    "    (\n",
+    "    return (\n",
     "        prediction_time.join(\n",
     "            electricity_lagged, left_on=\"prediction_time\", right_on=\"time\"\n",
     "        )\n",
     "        .join(\n",
-    "            all_city_weather.with_columns(\n",
-    "                cs.starts_with(\"weather_\").shift(-horizon_of_interest)\n",
-    "                # .name.suffix(f\"_future_{horizon_of_interest}h\")\n",
+    "            all_city_weather.select(\n",
+    "                [pl.col(\"time\")]\n",
+    "                + [\n",
+    "                    pl.col(c).shift(-h).alias(c + f\"_future_{h}h\")\n",
+    "                    for c in all_city_weather.columns\n",
+    "                    if c != \"time\"\n",
+    "                    for h in future_feature_horizons\n",
+    "                ]\n",
     "            ),\n",
     "            left_on=\"prediction_time\",\n",
     "            right_on=\"time\",\n",
     "        )\n",
     "        .join(\n",
-    "            calendar.with_columns(\n",
-    "                cs.starts_with(\"weather_\").shift(-horizon_of_interest)\n",
-    "                # .name.suffix(f\"_future_{horizon_of_interest}h\")\n",
+    "            calendar.select(\n",
+    "                [pl.col(\"time\")]\n",
+    "                + [\n",
+    "                    pl.col(c).shift(-h).alias(c + f\"_future_{h}h\")\n",
+    "                    for c in calendar.columns\n",
+    "                    if c != \"time\"\n",
+    "                    for h in future_feature_horizons\n",
+    "                ]\n",
     "            ),\n",
     "            left_on=\"prediction_time\",\n",
     "            right_on=\"time\",\n",
     "        )\n",
-    "    )\n",
-    "    .drop(\"prediction_time\")\n",
-    "    .skb.mark_as_X()\n",
-    ")\n",
+    "    ).drop(\"prediction_time\")\n",
+    "\n",
+    "\n",
+    "features = build_features(\n",
+    "    prediction_time=prediction_time,\n",
+    "    electricity_lagged=electricity_lagged,\n",
+    "    all_city_weather=all_city_weather,\n",
+    "    calendar=calendar,\n",
+    ").skb.mark_as_X()\n",
+    "\n",
     "features"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e7c5e1a",
+   "id": "40d38df5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "horizons = range(1, 25)  # Forecasting horizons from 1 to 24 hours\n",
+    "horizon_of_interest = horizons[-1]  # Focus on the 24-hour horizon\n",
+    "\n",
     "target_column_name_pattern = \"load_mw_horizon_{horizon}h\"\n",
     "\n",
     "targets = prediction_time.join(\n",
@@ -725,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49ae177a",
+   "id": "a48032e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,36 +761,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ef347ca",
+   "id": "8cc621a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import HistGradientBoostingRegressor\n",
     "import skrub.selectors as s\n",
     "\n",
-    "load_selector = s.glob(\"load_*\")\n",
-    "cal_selector = s.glob(\"cal_*\")\n",
-    "holiday_selector = s.glob(\"cal_is_holiday\")\n",
-    "weather_selector = s.glob(\"weather_*\")\n",
-    "temperature_selector = s.glob(\"weather_temperature_*\")\n",
-    "moisture_selector = s.glob(\"weather_moisture_*\")\n",
-    "cloud_cover_selector = s.glob(\"weather_cloud_cover_*\")\n",
-    "rolling_load_selector = s.glob(\"load_mw_rolling_*\")\n",
-    "nothing_selector = s.glob(\"\")  # cannot match non-empty feature names\n",
     "\n",
     "predictions = features.skb.apply(\n",
     "    skrub.DropCols(\n",
     "        cols=skrub.choose_from(\n",
     "            {\n",
-    "                \"none\": nothing_selector,\n",
-    "                \"load\": load_selector,\n",
-    "                \"rolling_load\": rolling_load_selector,\n",
-    "                \"weather\": weather_selector,\n",
-    "                \"temperature\": temperature_selector,\n",
-    "                \"moisture\": moisture_selector,\n",
-    "                \"cloud_cover\": cloud_cover_selector,\n",
-    "                \"calendar\": cal_selector,\n",
-    "                \"holiday\": holiday_selector,\n",
+    "                \"none\": s.glob(\"\"),  # No column has empty name.\n",
+    "                \"load\": s.glob(\"load_*\"),\n",
+    "                \"rolling_load\": s.glob(\"load_mw_rolling_*\"),\n",
+    "                \"weather\": s.glob(\"weather_*\"),\n",
+    "                \"temperature\": s.glob(\"weather_temperature_*\"),\n",
+    "                \"moisture\": s.glob(\"weather_moisture_*\"),\n",
+    "                \"cloud_cover\": s.glob(\"weather_cloud_cover_*\"),\n",
+    "                \"calendar\": s.glob(\"cal_*\"),\n",
+    "                \"holiday\": s.glob(\"cal_is_holiday\"),\n",
+    "                \"future_1h\": s.glob(\"*_future_1h\"),\n",
+    "                \"future_12h\": s.glob(\"*_future_12h\"),\n",
+    "                \"future_24h\": s.glob(\"*_future_24h\"),\n",
     "            },\n",
     "            name=\"dropped_features\",\n",
     "        )\n",
@@ -789,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57224f81",
+   "id": "9d5ac438",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -817,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b152a3d5",
+   "id": "881a42b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf5fcc79",
+   "id": "449e2db6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e2baef8",
+   "id": "5c892749",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -894,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07d224f0",
+   "id": "5d01e323",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab0478c7",
+   "id": "49b1c0e9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -916,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d4f4346",
+   "id": "4715a019",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3de0589",
+   "id": "9ef8df41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c5650cb",
+   "id": "18f1f66c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -969,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a765240a",
+   "id": "fbb36eac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a50ed00d",
+   "id": "1932966f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d73d59",
+   "id": "b7e41388",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f39c22c",
+   "id": "79311ad7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44cd7715",
+   "id": "c82fd264",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "644c4929",
+   "id": "1661ba78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a0f3afe",
+   "id": "50c5f6ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "966ad6a2",
+   "id": "96aecbc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e6e3e6c",
+   "id": "313dd879",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53997083",
+   "id": "02a3b9d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d2bcb42",
+   "id": "022cc8c9",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1174,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e70ebcb",
+   "id": "3e0aaf72",
    "metadata": {},
    "outputs": [],
    "source": []
